Fix overflow-x problem in scaffolding codes. #117

--- a/src/scss/components/_scaffolding.scss
+++ b/src/scss/components/_scaffolding.scss
@@ -188,6 +188,8 @@ pre {
   line-height: $code-block-line-height;
   background-color: $code-bg-color;
   border-radius: $code-border-radius;
+  max-width: 100%;
+  overflow-x: auto;
 
   code {
     padding: 0;
